--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <title>Mirko</title>
 </head>
 <body>
+    <div class="section">
+        <h1><span>welcome to my website </span></h1>
+        <p>The website is create to show my project
+         and i hope you learn somthing with me enjoy the project
+        you will learn more when you look some project you have 
+        an idea to learn how to built something new because human lean when
+         looking something new i hope great for your</p>
+         <p class="quote">this is writed by Mirko kawa</p>
+        <img src="img/js.png" alt="jsphoto" width="30px" height="30px">
+
+    </div>
+
    
     
 </body>
