--- a/mouse_move/mousemove.html
+++ b/mouse_move/mousemove.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styless/mouse.css">
+    <link rel="stylesheet" href="mouse.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>first</title>
+    <title>mouse_move</title>
 </head>
 <body>
     <div id="container">
