--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <!-- header end -->
 
   <!-- card content section  -->
+
   <div class="section">
     <div class="row">
       <div class="column">
@@ -46,15 +47,17 @@
         </div>
       </div>
 
+
       <div class="row">
         <div class="column">
           <div class="card">
             <img src="imgs/js.png" alt="Avatar" style="width:100%">
-            <h3> <a href="mouse_move/mousemove.html">Mouse</a></h3>
+            <h3> <a href=change_color/change_color.html>change_color</a></h3>
 
             <a href="https://github.com/Mirko-khatab/webproject2">Source_code</a>
           </div>
         </div>
+
 
         <div class="row">
           <div class="column">
@@ -65,6 +68,7 @@
               <a href="https://github.com/Mirko-khatab/webproject2">Source_code</a>
             </div>
           </div>
+
 
           <div class="row">
             <div class="column">
