every thing is very well

--- a/change_color/change_color.html
+++ b/change_color/change_color.html
@@ -12,12 +12,7 @@
 <button class="change">Change_color</button>
 </div>
 </body>
-<script>
-    const contaner=document.querySelector(".contaner");
-    const change=document.querySelector(".change");
-  change.addEventListener("click",function(){
-    contaner.style.background='#'+(Math.floor((1<<24)*Math.random())).toString(16);
-  })
+<script src="app.js">
 
 </script>
 </html>
