--- a/3d_Globe/indes.htm
+++ b/3d_Globe/indes.htm
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="mouse.css">
+    <link rel="stylesheet" href="glob_style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mouse_move</title>
+    <title>3d_Globe</title>
 </head>
 <body>
-    <div id="container">
-        <div class="box"></div>
-    </div>  
- </body>
- </html>
- <script src="app.js">
-
- </script>
+    <canvas id="scene"></canvas>
+    
+</body>
+<script src="glob.js"></script>
 </html>
