every thing is ready

--- a/index.html
+++ b/index.html
@@ -35,52 +35,100 @@
   <!-- header end -->
 
   <!-- card content section  -->
-
+<!--change color -->
   <div class="section">
     <div class="row">
       <div class="column">
         <div class="card">
           <img src="imgs/js.png" alt="Avatar" style="width:100%">
-          <h3> <a href="mouse_move/mousemove.html">Mouse</a></h3>
+          <h3><a href="change_color/change_color.html" target="_blank">change-color</a></h3>
 
           <a href="https://github.com/Mirko-khatab/webproject2">Source_code</a>
         </div>
       </div>
 
-
+<!-- 3d_Globa-->
       <div class="row">
         <div class="column">
           <div class="card">
             <img src="imgs/js.png" alt="Avatar" style="width:100%">
-            <h3> <a href=change_color/change_color.html>change_color</a></h3>
+            <h3> <a href="3d_Globe\indes.htm" target="_blank">3d_Globa</a></h3>
 
-            <a href="https://github.com/Mirko-khatab/webproject2">Source_code</a>
+            <a href="https://github.com/Mirko-khatab/webproject2" >Source_code</a>
           </div>
         </div>
 
-
+        <!-- change color-->
         <div class="row">
           <div class="column">
             <div class="card">
               <img src="imgs/js.png" alt="Avatar" style="width:100%">
-              <h3> <a href="mouse_move/mousemove.html">Mouse</a></h3>
+              <h3> <a href="mobile_showing/mobile.html" target="_blank">mobile-showing</a></h3>
 
               <a href="https://github.com/Mirko-khatab/webproject2">Source_code</a>
             </div>
           </div>
 
-
+          <!--mouse_move-->
           <div class="row">
             <div class="column">
               <div class="card">
                 <img src="imgs/js.png" alt="Avatar" style="width:100%">
-                <h3> <a href="mouse_move/mousemove.html">Mouse</a></h3>
+                <h3> <a href="mouse_move/mousemove.html" target="_blank">mouse_move</a></h3>
 
                 <a href="https://github.com/Mirko-khatab/webproject2">Source_code</a>
               </div>
             </div>
 
           </div>
+
+           <!-- Typing test -->
+        <div class="row">
+          <div class="column">
+            <div class="card">
+              <img src="imgs/js.png" alt="Avatar" style="width:100%">
+              <h3> <a href="typing_test\index.html" target="_blank">Typing-test</a></h3>
+
+              <a href="https://github.com/Mirko-khatab/webproject2">Source_code</a>
+            </div>
+          </div>
+
+
+           <!-- memory_games-->
+        <div class="row">
+          <div class="column">
+            <div class="card">
+              <img src="imgs/js.png" alt="Avatar" style="width:100%">
+              <h3> <a href="memory_game\index.html" target="_blank">memory-game</a></h3>
+
+              <a href="https://github.com/Mirko-khatab/webproject2">Source_code</a>
+            </div>
+          </div>
+
+
+           <!-- snake_nokiea -->
+        <div class="row">
+          <div class="column">
+            <div class="card">
+              <img src="imgs/js.png" alt="Avatar" style="width:100%">
+              <h3> <a href="snake_nokia/index.html" target="_blank">snake-nokia</a></h3>
+
+              <a href="https://github.com/Mirko-khatab/webproject2">Source_code</a>
+            </div>
+          </div>
+
+
+           <!-- space-invaders -->
+        <div class="row">
+          <div class="column">
+            <div class="card">
+              <img src="imgs/js.png" alt="Avatar" style="width:100%">
+              <h3> <a href="space_invaders/index.html" target="_blank" >space-invaders</a></h3>
+
+              <a href="https://github.com/Mirko-khatab/webproject2">Source_code</a>
+            </div>
+          </div>
+
 
         </div>
 
