--- a/snake_nokia/index.html
+++ b/snake_nokia/index.html
@@ -7,7 +7,7 @@
     <title>Snake Tutorial</title>
   </head>
   <body>
-
+<div class="container">
     <button class='start'>Start/Restart</button>
     <div class='score'>Score:<span>0</span></div>
 
@@ -114,5 +114,6 @@
       <div></div>
     </div>
 
+  </div>
   </body>
 </html>
