--- a/space_invaders/index.html
+++ b/space_invaders/index.html
@@ -9,8 +9,10 @@
 
 </head>
 <body>
+  <div class="container">
   <h1 class="results">0</h1>
   <div class="grid"></div>
   <script src="app.js"></script>
+</div>
 </body>
 </html>
